corrected some warnings, removed the integration tests from the default build